--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -57,7 +57,7 @@
     @media screen and (min-width: $desktop) {
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
       flex: 0;
       flex-basis: auto;
       margin-bottom: 0;
@@ -76,6 +76,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  & {
+    @media screen and (min-width: $desktop) {
+      align-items: flex-start;
+    }
+  }
 }
 
 .address__item {
